# tensorflow-imx

./: .bazelrc  RELEASE-imx.md  SCR_2.10.0.txt  SCR_2.11.1.txt  SCR_2.12.1.txt  SCR_2.14.0.txt  SCR_2.8.0.txt  SCR_2.9.1.txt  WORKSPACE
.github/ISSUE_TEMPLATE/: 09-test-template
.github/workflows/: benchmark_model_test.yml  x86_vsim_model_test.yml
tensorflow/: BUILD  tensorflow.bzl  workspace.bzl  workspace2.bzl
tensorflow/c/: BUILD
tensorflow/c/eager/: BUILD
tensorflow/cc/saved_model/: BUILD
tensorflow/core/: BUILD
tensorflow/core/common_runtime/eager/: BUILD
tensorflow/core/lib/io/: cache.cc
tensorflow/core/public/: version.h
tensorflow/core/runtime_fallback/: BUILD
tensorflow/core/runtime_fallback/kernel/: BUILD
tensorflow/core/runtime_fallback/runtime/: BUILD
tensorflow/core/runtime_fallback/util/: BUILD
tensorflow/core/tfrt/utils/: BUILD
tensorflow/lite/: CMakeLists.txt  nnapi_delegate.cc  tflite_exported_symbols.lds  tflite_version_script.lds
tensorflow/lite/c/: builtin_op_data.h  common.h
tensorflow/lite/core/: subgraph.cc  subgraph.h
tensorflow/lite/delegates/flex/: BUILD  build_def.bzl
tensorflow/lite/delegates/flex/test/: BUILD  simple_flex_model_int8.tflite
tensorflow/lite/delegates/nnapi/: BUILD  nnapi_delegate.cc  nnapi_delegate_kernel.h
tensorflow/lite/delegates/vx-delegate/: BUILD.bazel  CMakeLists.txt  README.md  README.txt  delegate_main.cc  delegate_main.h  model_status.md  op_map.cc  op_status.md  utils.h
tensorflow/lite/examples/label_image/: BUILD  CMakeLists.txt  label_image.cc  label_image.h
tensorflow/lite/examples/python/: label_image.py
tensorflow/lite/experimental/microfrontend/: BUILD
tensorflow/lite/g3doc/guide/: build_cmake.md
tensorflow/lite/kernels/: BUILD  CMakeLists.txt  activations.cc  activations_test.cc  register.cc  register_ref.cc  sub.cc  test_main.cc  test_util.cc  test_util.h  unidirectional_sequence_lstm_test.cc  vsi_npu_precompiled.cc
tensorflow/lite/kernels/ethos_u/: ethosu.cc  ethosu.hpp  ethosu_drv.cc
tensorflow/lite/kernels/internal/: BUILD  spectrogram.cc  transpose_utils.cc
tensorflow/lite/kernels/internal/optimized/: optimized_ops.h
tensorflow/lite/kernels/parse_example/: BUILD
tensorflow/lite/nnapi/: NeuralNetworksShim.h  nnapi_implementation.cc
tensorflow/lite/profiling/: profile_summarizer.cc
tensorflow/lite/python/interpreter_wrapper/: interpreter_wrapper.cc
tensorflow/lite/python/testdata/: BUILD
tensorflow/lite/schema/mutable/: schema_generated.h
tensorflow/lite/testing/: BUILD
tensorflow/lite/tools/: build_benchmark_flex_test.sh  build_elinux_flex_libs_from_models.sh
tensorflow/lite/tools/benchmark/: BUILD  CMakeLists.txt  benchmark_performance_options.cc  benchmark_tflite_model.h
tensorflow/lite/tools/cmake/modules/: FindGoogleTest.cmake  Findre2.cmake  GoogleTest.cmake  abseil-cpp.cmake  cpuinfo.cmake  egl_headers.cmake  eigen.cmake  farmhash.cmake  fft2d.cmake  flatbuffers.cmake  gemmlowp.cmake  neon2sse.cmake  opengl_headers.cmake  re2.cmake  ruy.cmake  vulkan_headers.cmake  xnnpack.cmake
tensorflow/lite/tools/cmake/modules/re2/: CMakeLists.txt
tensorflow/lite/tools/cmake/modules/ruy/: CMakeLists.txt
tensorflow/lite/tools/cmake/modules/xnnpack/: CMakeLists.txt
tensorflow/lite/tools/cmake/modules/xnnpack/patches/: 0001-Partial-changes-for-fixing-runtime-setup-issue.patch
tensorflow/lite/tools/delegates/: BUILD  delegate_provider.cc  nnapi_delegate_provider.cc  vx_delegate_provider.cc
tensorflow/lite/tools/evaluation/: BUILD  CMakeLists.txt  utils.cc  utils.h
tensorflow/lite/tools/evaluation/proto/: evaluation_config.pb.cc  evaluation_config.pb.h  evaluation_stages.pb.cc  evaluation_stages.pb.h  evaluation_stages_pb2.py  preprocessing_steps.pb.cc  preprocessing_steps.pb.h
tensorflow/lite/tools/evaluation/stages/: inference_profiler_stage.cc  inference_profiler_stage.h
tensorflow/lite/tools/evaluation/tasks/inference_diff/: README.md  run_eval.cc
tensorflow/lite/tools/make/: Makefile  build_imx.sh  build_unittest_deps.sh  download_dependencies.sh  re2.CMakeLists.txt
tensorflow/lite/tools/pip_package/: build_pip_package.sh  build_pip_package_with_cmake.sh  build_pip_package_with_cmake2.sh  setup.py
tensorflow/python/: BUILD
tensorflow/python/keras/engine/: training.py
tensorflow/python/ops/: histogram_ops.py
tensorflow/python/platform/: BUILD
tensorflow/python/tools/: BUILD
tensorflow/tools/pip_package/: setup.py
tensorflow/tsl/: BUILD  tsl.bzl
tensorflow/tsl/platform/default/: build_config.bzl  build_config_root.bzl
tensorflow/tsl/profiler/lib/: BUILD
